# pyangle

./: env-record.yml  environment.yml  pyproject.toml
src/pyangle/: calc.py
tests/: test_calc.py
