[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyangle"
description = "A Pythagoras solver package"
version = "0.0.1"
readme = "README.md"
authors = [
{ name="James Dunstan", email="mm21jd@leeds.ac.uk" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.2",
]